objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <description>This field is created for SE Use only for Resource Assignment Engine Project</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acct Support: Acct/Oppty Planning</fullName>
                </value>
                <value>
                    <fullName>Acct Support: Arch Delivery</fullName>
                </value>
                <value>
                    <fullName>Acct Support: Arch Discovery</fullName>
                </value>
                <value>
                    <fullName>Acct Support: Awareness</fullName>
                </value>
                <value>
                    <fullName>Acct Support: Product/Tech Updates</fullName>
                </value>
                <value>
                    <fullName>Internal: General</fullName>
                </value>
                <value>
                    <fullName>Internal: Lab</fullName>
                </value>
                <value>
                    <fullName>Internal: Training</fullName>
                </value>
                <value>
                    <fullName>Oppty Support: BoM</fullName>
                </value>
                <value>
                    <fullName>Oppty Support: Demo</fullName>
                </value>
                <value>
                    <fullName>Oppty Support: General</fullName>
                </value>
                <value>
                    <fullName>Oppty Support: POC</fullName>
                </value>
                <value>
                    <fullName>Partner: Training</fullName>
                </value>
                <value>
                    <fullName>Post Sales: General</fullName>
                </value>
                <value>
                    <fullName>Relationship building: General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>This field is created for Resource Assignment Engine project and Aids in the recognition of who has been involved. Provides reporting capabilities</description>
        <label>Attendance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>CSE/xSA</fullName>
                </value>
                <value>
                    <fullName>Partner AM</fullName>
                </value>
                <value>
                    <fullName>Partner SE</fullName>
                </value>
                <value>
                    <fullName>Partner TSS</fullName>
                </value>
                <value>
                    <fullName>PSS</fullName>
                </value>
                <value>
                    <fullName>Sales Mngmt</fullName>
                </value>
                <value>
                    <fullName>VSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_Category__c</fullName>
        <label>CX Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case Close Loop</fullName>
                </value>
                <value>
                    <fullName>Case Follow-up</fullName>
                </value>
                <value>
                    <fullName>Customer Champion Meeting</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation</fullName>
                </value>
                <value>
                    <fullName>Initial Survey</fullName>
                </value>
                <value>
                    <fullName>Journey Map Follow-up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>QBR</fullName>
                </value>
                <value>
                    <fullName>Survey Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Results__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores status of event associated with a call.</description>
        <label>Call Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsaved</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Not Linked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Start_Time_Hidden__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores call start time in milliseconds.</description>
        <label>Call Start Time(Hidden)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores whether the event created for an incoming or outgoing call.</description>
        <label>Jabber Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Id__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores phone number of user who initiated the call</description>
        <label>Caller Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores name of user who initiated the call.</description>
        <label>Caller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used in Jabber Integration with SFDC application.Represent whether the call event is the cancelled one or not.</description>
        <label>Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category/Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Appointment Set</fullName>
                </value>
                <value>
                    <fullName>Booked Appointment</fullName>
                </value>
                <value>
                    <fullName>CPOC Labs</fullName>
                </value>
                <value>
                    <fullName>Created New Opportunity/Pipeline</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Demand Generation</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Event</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Floor Day</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Other</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Outbound Call Campaign</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Partner Training</fullName>
                </value>
                <value>
                    <fullName>CSA_LA Web seminar</fullName>
                </value>
                <value>
                    <fullName>CSAT Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Customer Briefing Center (CBC)</fullName>
                </value>
                <value>
                    <fullName>Customer Business Review (CBR)</fullName>
                </value>
                <value>
                    <fullName>Customer Reference Architecture (CRA)</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>CXRen-Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>CXRen-Email</fullName>
                </value>
                <value>
                    <fullName>CXRen-Inbound Call</fullName>
                </value>
                <value>
                    <fullName>CXRen-Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Delivered a Demo on the Spot</fullName>
                </value>
                <value>
                    <fullName>Digital - Commerce Automation</fullName>
                </value>
                <value>
                    <fullName>Digital - IB Validation</fullName>
                </value>
                <value>
                    <fullName>Digital - Other</fullName>
                </value>
                <value>
                    <fullName>Digital - Request for Quote</fullName>
                </value>
                <value>
                    <fullName>Discussed New Technology</fullName>
                </value>
                <value>
                    <fullName>Discussed Promotion or Special Offer</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Follow Up Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Task_Creation__c</fullName>
        <label>Check Task Creation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Purpose__c</fullName>
        <description>Describes Cisco’s purpose or objective for the event or task.</description>
        <label>Cisco Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Use this brief comments field to capture short comments. Brief comments will also show up in the activity history section as a quick reference.</description>
        <label>Brief Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Highest_Title__c</fullName>
        <description>Provides the highest title of customer presence (this field is created for SE Use only for Resource Assignment Engine Project)</description>
        <label>Customer Highest Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CBO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>CxO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>LOB Exec</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRT_Main_Stage__c</fullName>
        <description>Capture DRT Main Stage</description>
        <label>DRT Main Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1  DRT Opportunity Identified / DRT Engaged</fullName>
                </value>
                <value>
                    <fullName>Stage 2  Partner / DOM Engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>Stage 3  Proposal / Quote</fullName>
                </value>
                <value>
                    <fullName>Stage 4  Pricing / Agreement</fullName>
                </value>
                <value>
                    <fullName>Stage 5  Won	/ Lost / Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRT_Sub_Stage__c</fullName>
        <description>Capture the DRT Sub Stage</description>
        <label>DRT Sub Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DRT_Main_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A - Sent to Partner</fullName>
                </value>
                <value>
                    <fullName>1B - Sent to DOM</fullName>
                </value>
                <value>
                    <fullName>1C - Partner Admin assigned to PSR</fullName>
                </value>
                <value>
                    <fullName>2A - PSR engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>2B - DOM engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>2C - Warm transfer to AM</fullName>
                </value>
                <value>
                    <fullName>2D - Nurture by DOM/DRR</fullName>
                </value>
                <value>
                    <fullName>5A - Won</fullName>
                </value>
                <value>
                    <fullName>5B - Lost</fullName>
                </value>
                <value>
                    <fullName>5C - Cancelled</fullName>
                </value>
                <value>
                    <fullName>5D - Long Sales Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_System__c</fullName>
        <description>To track SE Customer demonstrations. WR-00407</description>
        <label>Demo System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>Cloud Networking Group</fullName>
                </value>
                <value>
                    <fullName>CPOC</fullName>
                </value>
                <value>
                    <fullName>dCloud</fullName>
                </value>
                <value>
                    <fullName>Demo Loan Program (DLP)</fullName>
                </value>
                <value>
                    <fullName>GOLD Lab</fullName>
                </value>
                <value>
                    <fullName>Meraki</fullName>
                </value>
                <value>
                    <fullName>Personal/Local Lab</fullName>
                </value>
                <value>
                    <fullName>Regional Lab</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores duration of the call.</description>
        <label>Jabber Duration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Outcome__c</fullName>
        <description>Describes the outcome of the event with the customer.</description>
        <label>Event Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>FY15Q1 SCP Parter Transformation V1.0.
Added checkbox to keep parity with the Activities related list</description>
        <formula>NOT(IsTask )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jabber_Call_Duration_in_Minutes__c</fullName>
        <description>Jabber call duration in minutes</description>
        <formula>CallDurationInSeconds / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Jabber call duration in minutes</inlineHelpText>
        <label>Jabber Call Duration in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jabber_Call_Duration_ms__c</fullName>
        <description>Jabber Call Duration in milliseconds</description>
        <inlineHelpText>Jabber Call Duration in milliseconds</inlineHelpText>
        <label>Jabber Call Duration(ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jabber_Call_End_Date_Time__c</fullName>
        <description>Capture the end time of the jabber call</description>
        <inlineHelpText>Capture the end time of the jabber call</inlineHelpText>
        <label>Jabber Call End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jabber_Call_Start_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Capture start time of the jabber call</description>
        <inlineHelpText>Capture start time of the jabber call</inlineHelpText>
        <label>Jabber Call Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <label>Marketing Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(P)WorkplaceTransformation (GMP)</fullName>
                </value>
                <value>
                    <fullName>AA 2nd Chance Attach</fullName>
                </value>
                <value>
                    <fullName>AA Expired</fullName>
                </value>
                <value>
                    <fullName>AA Icebreaker</fullName>
                </value>
                <value>
                    <fullName>AA Refresh</fullName>
                </value>
                <value>
                    <fullName>AA Security</fullName>
                </value>
                <value>
                    <fullName>AppD</fullName>
                </value>
                <value>
                    <fullName>ASR Security POV</fullName>
                </value>
                <value>
                    <fullName>AWS Marketplace</fullName>
                </value>
                <value>
                    <fullName>Business Cloud Advisor</fullName>
                </value>
                <value>
                    <fullName>Business Video</fullName>
                </value>
                <value>
                    <fullName>Call Day</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>CBC Demo</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital/Financing</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital New MLFA SPIFF Campaign</fullName>
                </value>
                <value>
                    <fullName>Cisco Connect US</fullName>
                </value>
                <value>
                    <fullName>Cisco Customer Program</fullName>
                </value>
                <value>
                    <fullName>Cisco Cyber Threat Response (CTR) Clinic</fullName>
                </value>
                <value>
                    <fullName>Cisco Days</fullName>
                </value>
                <value>
                    <fullName>Cisco Executive Events</fullName>
                </value>
                <value>
                    <fullName>Cisco Expo / Interop</fullName>
                </value>
                <value>
                    <fullName>Cisco Interactive Technology Workshop</fullName>
                </value>
                <value>
                    <fullName>Cisco Led Events</fullName>
                </value>
                <value>
                    <fullName>Cisco Live</fullName>
                </value>
                <value>
                    <fullName>Cisco On the Road</fullName>
                </value>
                <value>
                    <fullName>Cisco Plus/Connect/Live/Innovate</fullName>
                </value>
                <value>
                    <fullName>Cisco Ready - LDoS Opp</fullName>
                </value>
                <value>
                    <fullName>Cisco Solutions Summit</fullName>
                </value>
                <value>
                    <fullName>Cisco Thought Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Shows what format was used for interaction (This field is for SE Use only for Resource Assignment Engine project)</description>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Office: Assigned</fullName>
                </value>
                <value>
                    <fullName>Cisco Office: Other</fullName>
                </value>
                <value>
                    <fullName>Collab Tools: Telepresence</fullName>
                </value>
                <value>
                    <fullName>Collab Tools: WebEx</fullName>
                </value>
                <value>
                    <fullName>Collab Tools: Other</fullName>
                </value>
                <value>
                    <fullName>Offsite: Customer</fullName>
                </value>
                <value>
                    <fullName>Offsite: Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Used to determine what object the task is assigned to.  Account or Oppty.  Custom objects can be added into the formula</description>
        <formula>If(BEGINS(WhatId, '006'),'Opportunity',if(BEGINS(WhatId, '001'),'Account','custom'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field used in Jabber Integration with SFDC application.Stores phone number to which call made.</description>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Date__c</fullName>
        <description>Stores date &amp; time of the call</description>
        <inlineHelpText>Date &amp; time of the call</inlineHelpText>
        <label>Playbooks Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Hour__c</fullName>
        <description>Stores the hour the call was placed in the prospect's time</description>
        <inlineHelpText>Stores the hour the call was placed in the prospect's time</inlineHelpText>
        <label>Playbooks Call Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Identifier__c</fullName>
        <description>Stores a unique identifier for data syncing purposes</description>
        <inlineHelpText>How InsideSales.com identifies a call was made</inlineHelpText>
        <label>Playbooks Call Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Recording__c</fullName>
        <description>A link to the call recording of that specific call</description>
        <inlineHelpText>A link to the call recording of that specific call</inlineHelpText>
        <label>Playbooks Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Playbooks_Email_Link_Click_Count__c</fullName>
        <description>Playbooks Email Link Click Count</description>
        <label>Playbooks Email Link Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <description>Stores the name of the play a record is currently enrolled in</description>
        <inlineHelpText>The name of the play a record is currently enrolled in</inlineHelpText>
        <label>Playbooks Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a rep marks a play as successful</description>
        <inlineHelpText>Check this box if a rep marks a play as successful</inlineHelpText>
        <label>Playbooks Play Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Ring_Time__c</fullName>
        <description>Stores how long the phone rang before the prospect picked up</description>
        <inlineHelpText>How long the phone rang before the prospect answered</inlineHelpText>
        <label>Playbooks Ring Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Link_Clicked_Data__c</fullName>
        <description>Playbooks Step Email Link Clicked Data</description>
        <label>Playbooks Step Email Link Clicked Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Open_Count__c</fullName>
        <description>Playbooks Step Email Open Count</description>
        <label>Playbooks Step Email Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Playbooks Step Email Opened</description>
        <label>Playbooks Step Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_RepliedPlaybooks_St__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Playbooks Step Email Link</description>
        <label>Playbooks Step Email RepliedPlaybooks St</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Playbooks Step Email Replied</description>
        <label>Playbooks Step Email Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Reply_Count__c</fullName>
        <description>Playbooks Step Email Reply Count</description>
        <label>Playbooks Step Email Reply Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Template_Name_c__c</fullName>
        <description>Playbooks_Step_Email_Template_Name__c</description>
        <label>Playbooks_Step_Email_Template_Name__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_ID__c</fullName>
        <label>Playbooks Step ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <description>Stores the step number a play was on when the activity was completed</description>
        <inlineHelpText>The step number the activity was completed on</inlineHelpText>
        <label>Playbooks Step Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Playbooks Step Success</description>
        <label>Playbooks Step Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Type__c</fullName>
        <description>Stores the type of step for the task (phone, email, other)</description>
        <inlineHelpText>The type of step for the task (phone, email, other)</inlineHelpText>
        <label>Playbooks Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Services__c</fullName>
        <description>Tracking GVS&amp;CS Services reps activity and quality customer engagements to understand impact on bookings and revenue.</description>
        <label>Primary Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smartnet</fullName>
                </value>
                <value>
                    <fullName>Solution Support</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Premium services</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>TSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>